--- a/pom.xml
+++ b/pom.xml
@@ -12,23 +12,24 @@
     <version>2.6.7-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>flair-engine</name>
+    
     <scm>
-        <connection>scm:git:https://github.com/viz-centric/flair-engine.git</connection>
-        <developerConnection>scm:git:https://github.com/viz-centric/flair-engine.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/viz-centric/flair-engine.git</url>
+        <connection>scm:git:${project.scm.url}</connection>
+        <url>${project.scm.url}</url>
+        <developerConnection>scm:git:${project.scm.url}</developerConnection>
     </scm>
+
     <distributionManagement>
         <repository>
-            <id>dev-azure-com-vizcentric-flair-engine</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-engine/maven/v1</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+            <id>aws-release</id>
+            <name>AWS Release Repository</name>
+            <url>s3://${bucket.name}/release</url>
         </repository>
+        <snapshotRepository>
+            <id>aws-snapshot</id>
+            <name>AWS Snapshot Repository</name>
+            <url>s3://${bucket.name}/snapshot</url>
+        </snapshotRepository>
     </distributionManagement>
     <repositories>
         <repository>
@@ -97,6 +98,10 @@
         </repository>
     </repositories>
     <properties>
+        <project.scm.url>https://github.com/viz-centric/flair-engine.git</project.scm.url>
+        <aws-maven.version>5.0.0.RELEASE</aws-maven.version>
+        <bucket.name>vizcentric-mvn-repo</bucket.name>
+
         <docker-maven-plugin.version>0.27.2</docker-maven-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-scm-provider-gitexe.version>1.9.5</maven-scm-provider-gitexe.version>
@@ -857,6 +862,13 @@
     </dependencies>
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
+        <extensions>
+            <extension>
+                <groupId>org.springframework.build</groupId>
+                <artifactId>aws-maven</artifactId>
+                <version>${aws-maven.version}</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
