--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.fbi.engine</groupId>
     <artifactId>flair-engine</artifactId>
-    <version>2.6.7</version>
+    <version>2.6.8-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>flair-engine</name>
     
@@ -17,7 +17,7 @@
         <connection>scm:git:${project.scm.url}</connection>
         <url>${project.scm.url}</url>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
-      <tag>v2.6.7</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
