big query support

--- a/pom.xml
+++ b/pom.xml
@@ -180,8 +180,8 @@
         <project.scm.id>github-credentials</project.scm.id>
 
         <!-- our dependencies -->
-        <flair-messages.version>0.3.23</flair-messages.version>
-        <flair-query-language.version>1.6.39</flair-query-language.version>
+        <flair-messages.version>0.3.24.0-SNAPSHOT</flair-messages.version>
+        <flair-query-language.version>1.6.40.0-SNAPSHOT</flair-query-language.version>
         <project-bi-common.version>1.4.19</project-bi-common.version>
         <all-grpc.version>1.23.0</all-grpc.version>
         <lombok.version>1.18.8</lombok.version>
