--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
         <!-- our dependencies -->
         <flair-messages.version>0.3.24.1-SNAPSHOT</flair-messages.version>
         <flair-query-language.version>1.6.40.0-SNAPSHOT</flair-query-language.version>
-        <project-bi-common.version>1.4.19</project-bi-common.version>
+        <project-bi-common.version>1.4.20.0-SNAPSHOT</project-bi-common.version>
         <all-grpc.version>1.23.0</all-grpc.version>
         <lombok.version>1.18.8</lombok.version>
 
